2006-08-15  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/context.cc: remove another TODO.  I looked at cairo_append_path,
	and it just copies the data from the supplied path and appends that to the
	current path -- it doesn't modify the passed in path -- so it can stay
	const.

2006-08-15  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/context.h: remove a FIXME that was resolved on the mailing list

2006-07-11  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/refptr.h: unref(): Only delete the refcount int when the refcount has 	
	reached 0, instead of deleting it every time. Thanks valgrind.

2006-07-11  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/refptr.h: From-C-object Constructor: Added documentation explaining 
	how/when to use it and when to do an extra reference(). This will help us, 
	though it should rarely be necessary for an application developer to understand 
	it.
	Made pCppRefcount_ mutable, so that refcount_() can be a const method so that 
	the templated constructor compiles.
	Added class documentation to explain why we even want to use this class.

2006-07-05  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/refptr.h: copy constructors: initialize the pCppRefcount_ member 
	variable, using a public refcount_() method when necessary to access a 
	different RefPtr<> specialization.

2006-07-11  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/refptr.h: Use an int to reference-count the C++ object, and 
	only reference/unreference the object (and hence the underlying C object) 
	when receiving/deleting the C++ object. Without this, we never delete 
	the C++ object. Fixes bug #7442.

2006-07-09  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* NEWS: add NEWS for 1.1.10 release
	* configure.in: bump version to 1.1.12

2006-07-05  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: Ooops, I had accidentally removed dependency info for
	release-publish target
